--- a/index.html
+++ b/index.html
@@ -6,15 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/general.css">
-    <title>Document</title>
+    <title>Henry Chavez - Vue First Step</title>
 </head>
 
 <body>
     <div id="app">
     </div>
-
-
-  
 
 </body>
 <script src="./dist/build.js"></script>
