--- a/index.html
+++ b/index.html
@@ -10,8 +10,29 @@
 </head>
 
 <body>
+
+   
+
     <div id="app">
     </div>
+
+    <!--
+    <div class="card">
+        <iframe src="https://www.youtube.com/embed/7vIpjUycaFE" frameborder="0"
+            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+        <p class="card-title">
+            title
+        </p>
+        <p class="card-description">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore, repellat exercitationem? Ut repellendus
+            iure doloremque ex repudiandae velit magni nisi atque esse possimus, nesciunt quia, voluptates doloribus
+            eius ipsam laborum!
+        </p>
+        <button class='card-button'>Ver Detalle</button>
+
+    </div>
+-->
 
 </body>
 <script src="./dist/build.js"></script>
